# internal/controller/role.go
@@ -233,6 +233,39 @@ func GetRoleApis(c *gin.Context) {
 	})
 }
 
+// GetRoleButtons
+// @Tags 角色相关
+// @title 获取角色的按钮权限列表
+// @description 由于swagger本身的限制，get请求的切片会报错，并非接口本身问题，请换个方式，如http://127.0.0.1:9081/api/v1/group/apis?ids=3&ids=4
+// @Summary 获取角色的按钮权限列表
+// @Produce   application/json
+// @Param Authorization header string true "格式为：Bearer 登录返回的用户令牌"
+// @Param data query api.IdsReq true "传角色ID切片"
+// @Success 200 {object} api.Response "{"data":{},"meta":{msg":"Success"}}"
+// @Failure 403 {object} api.Response "{"data":{}, "meta":{"msg":"错误信息", "error":"错误格式输出(如存在)"}}"
+// @Failure 500 {object} api.Response "{"data":{}, "meta":{"msg":"错误信息", "error":"错误格式输出(如存在)"}}"
+// @Router /roles/buttons [get]
+func GetRoleButtons(c *gin.Context) {
+	var params api.IdsReq
+	if err := c.ShouldBind(&params); err != nil {
+		c.JSON(500, util.BindErrorResponse(err))
+		return
+	}
+	res, err := service.RoleServiceApp().GetRoleButtons(params)
+	if err != nil {
+		logger.Log().Error("role", "获取角色按钮失败", err)
+		c.JSON(500, util.ServerErrorResponse("获取角色按钮失败", err))
+		return
+	}
+
+	logger.Log().Info("role", "获取角色按钮成功", fmt.Sprintf("角色ID: %d", params.Ids))
+	c.JSON(200, api.Response{
+		Code: consts.SERVICE_SUCCESS_CODE,
+		Msg:  "Success",
+		Data: res,
+	})
+}
+
 // GetRoleUsers
 // @Tags 角色相关
 // @title 获取角色的关联用户列表
